tests: use fixture for popover tests
Storybook stories are rendered inside some wrapper elements, one of which has overflow: hidden set. For this component, that's a problem because cypress then thinks the popover is not visible as it overlaps the containers bounds. Using a fixture creates the most simple environment possible and increases test stability. Also, see https://github.com/swisspost/design-system/issues/2364.

--- a/packages/components/src/components/post-popover/post-popover.scss
+++ b/packages/components/src/components/post-popover/post-popover.scss
@@ -8,6 +8,8 @@
 :host {
   --post-contrast-color: #{post.$white};
   --post-bg-rgb: #{post.rgb-values(post.$gray-80)};
+
+  display: block;
 }
 
 .visually-hidden {
